@@ -1,3 +1,10 @@
+2008-05-07  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/36106
+	* omp-low.c (expand_omp_atomic_pipeline): Load value using the
+	integral type rather than floating point, then VIEW_CONVERT_EXPR
+	to the floating point type.
+
 2008-05-05  Marius Strobl <marius@FreeBSD.org>
 
 	* gthr-posix.h (__gthread_active_p): Use the Solaris implementation
